--- a/src/project_data.json
+++ b/src/project_data.json
@@ -8,8 +8,8 @@
                 "path": "/emails/UA_EM1.html"
             },
             "2" : {
-                "name": "UA_Rock2",
-                "path": "/emails/UA_EM1.html"
+                "name": "UA_254",
+                "path": "/emails/UA_EM2.html"
             }
         
         }
