update nmss logo

--- a/src/project_data.json
+++ b/src/project_data.json
@@ -16,7 +16,7 @@
     },
     "nmss": {
         "link": "nmss",
-        "logo": "https://i.imgur.com/JU0GWf3.png",
+        "logo": "https://i.imgur.com/03UEBiz.png",
         "emails": {
             "1": {
                 "name": "NMSS_Aug",
